SERVER-61496 [SBE] Fix handling of nested SORT_MERGE stages in buildSortMerge

(cherry picked from commit ad769c1c65523f0847a851f4197ade2e3cc07585)