jstests/core/sort_merge.js
@@ -100,8 +100,8 @@ function runTest(sorts, filters, verifyCallback) {
             verifyPlan(sortInfo, filter, verifyCallback);
             const res = coll.find(filter).sort(sortInfo.sortPattern).toArray();
             assert(isSorted(res, sortInfo.cmpFunction),
-                   () => "Assertion failed for filter: " + filter + "\n" +
-                       "sort pattern " + sortInfo.sortPattern);
+                   () => "Assertion failed for filter: " + tojson(filter) + "\n" +
+                       "sort pattern " + tojson(sortInfo.sortPattern));
 
             // Check that there are no duplicates.
             let ids = new Set();
@@ -211,7 +211,7 @@ function runTest(sorts, filters, verifyCallback) {
         {
             sortPattern: {sortFieldA: 1, sortFieldB: -1},
             cmpFunction: (docA, docB) => docA.sortFieldA < docB.sortFieldA ||
-                (docA.sortFieldA === docB.sortFieldA && docA.sortFieldA > docB.sortFieldA)
+                (docA.sortFieldA === docB.sortFieldA && docA.sortFieldB > docB.sortFieldB)
         },
     ];
     runTest(kSorts, kFilterPredicates, verifyCoveredPlan);
@@ -253,7 +253,7 @@ function runTest(sorts, filters, verifyCallback) {
         {
             sortPattern: {sortFieldA: 1, sortFieldB: -1},
             cmpFunction: (docA, docB) => docA.sortFieldA < docB.sortFieldA ||
-                (docA.sortFieldA === docB.sortFieldA && docA.sortFieldA > docB.sortFieldA)
+                (docA.sortFieldA === docB.sortFieldA && docA.sortFieldB > docB.sortFieldB)
         },
     ];
     runTest(kSorts, kFilterPredicates, verifyMixedPlan);
